début affichage quizz

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Environment Variables - Quiz App
 
 # Base de données (Neon PostgreSQL)
-DATABASE_URL="postgresql://username:password@ep-xxx-xxx.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_5xnXpBLgb8OQ@ep-mute-math-aip2unxs-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding="
+
 
 # NextAuth.js
 # Générer avec: openssl rand -base64 32
-NEXTAUTH_SECRET="votre-secret-tres-securise"
+NEXTAUTH_SECRET="YRH89vZuYB1XlaHnuk5XKxzCKxZKesc0KC0MTriUN9A="
 NEXTAUTH_URL="http://localhost:3000"
 
 # En production (Vercel)
